fixed spacing between slides

--- a/nyt/src/App.css
+++ b/nyt/src/App.css
@@ -1,6 +1,7 @@
 .App {
   height: 100vh;
-  overflow-y: scroll;
+  width: 100vw;
+  overflow-y: hidden;
   overflow-x: hidden;
 }
 
