--- a/nyt/src/components/Articles/Article10/styles.css
+++ b/nyt/src/components/Articles/Article10/styles.css
@@ -4,8 +4,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 1650px;
-    width: 1420px;
+    height: 100vh;
+    width: 100vw;
     overflow-y: scroll;
 }
 
