--- a/nyt/src/pages/ArticleGallery/styles.css
+++ b/nyt/src/pages/ArticleGallery/styles.css
@@ -9,8 +9,8 @@
     display: block;
     position: absolute;
     background-color: black;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: auto;
   }
 
   #banner {
@@ -20,13 +20,27 @@
     color: white;
   }
 
+  .slidedeck-container {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    width: auto;
+    height: 100%;
+    background-color: pink;
+  }
+
   .slide-container {
-    position: absolute;  
-    display: block;
+    position: relative;
+    height: 100vh;
+    width: auto;
+  }
+  .slide-container.frontpage {
+    position: relative;
     height: 100vh;
     width: 100vw;
   }
 }
+
 
 @media (min-width: 992px) { 
   .carousel-container {
